required --add-reads clause added to launchers, truststore config updated