@@ -12,8 +12,8 @@ applicationDefaultJvmArgs = [
         "-Dcodion.client.connectionType=remote",
         "-Dcodion.server.hostname=${serverHost}",
         "-Dcodion.server.registryPort=${serverRegistryPort}",
-        "-Djavax.net.ssl.trustStore=truststore.jks",
-        "-Djavax.net.ssl.trustStorePassword=crappypass",
+        "-Dcodion.client.trustStore=truststore.jks",
+        "-Dcodion.client.trustStorePassword=crappypass",
         "-Dsun.awt.disablegrab=true"
 ]
 
@@ -29,8 +29,8 @@ jlink {
                'is.codion.framework.db.rmi,is.codion.plugin.logback.proxy']
 
     launcher {
-        name = 'chinook-remote'
         jvmArgs = applicationDefaultJvmArgs
+        jvmArgs += ["--add-reads", "chinook.merged.module=org.slf4j"]//for sslcontext-kickstart
     }
 
     jpackage {
